# flashlight

./: CMakeLists.txt
flashlight/app/: CMakeLists.txt
flashlight/app/asr/: Test.cpp  Train.cpp
flashlight/app/asr/augmentation/: CMakeLists.txt  Reverberation.h  SoundEffectConfig.cpp  TimeStretch.cpp  TimeStretch.h
flashlight/app/asr/augmentation/sox/: CMakeLists.txt  Effects.cpp  Effects.h  EffectsChain.cpp  EffectsChain.h  Io.cpp  Io.h  Utils.cpp  Utils.h
flashlight/app/asr/decoder/: DecodeMaster.cpp
flashlight/app/asr/runtime/: Logger.cpp  Logger.h
flashlight/app/asr/test/: CMakeLists.txt
flashlight/app/asr/test/augmentation/: SoundEffectConfigTest.cpp  (+1 more)
flashlight/app/imgclass/dataset/: Imagenet.cpp
flashlight/app/imgclass/examples/: ImageNetResnet34.cpp
flashlight/common/: Logging.cpp  Logging.h
flashlight/fl/autograd/: CMakeLists.txt  Functions.cpp  Functions.h
flashlight/fl/common/: CMakeLists.txt  DevicePtr.h  MiOpenUtils.cpp  MiOpenUtils.h  OpenClUtils.cpp  OpenClUtils.h
flashlight/fl/contrib/modules/: Transformer.cpp  Transformer.h
flashlight/fl/dataset/: BlobDataset.cpp  PrefetchDataset.cpp  Utils.cpp
flashlight/fl/distributed/: CMakeLists.txt
flashlight/fl/examples/: Mnist.cpp
flashlight/fl/memory/: MemoryManagerAdapter.cpp  MemoryManagerAdapter.h  MemoryManagerInstaller.cpp
flashlight/fl/memory/managers/: CachingMemoryManager.cpp  CachingMemoryManager.h  DefaultMemoryManager.h
flashlight/fl/optim/: Utils.cpp
flashlight/fl/test/autograd/: AutogradTest.cpp
flashlight/fl/test/memory/: MemoryFrameworkTest.cpp
(+7 files in other folders)
